Fix image size on mobile

--- a/styles.css
+++ b/styles.css
@@ -91,8 +91,7 @@ footer {
   background-position: right center;
   background-size: cover;
   width: 100%;
-  height: 16vh;
-  margin-top: -4em;
+  height: 10vh;
   padding-top: .75rem;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
@@ -129,5 +128,10 @@ a:active {
   li {
     font-size: 1.15em;
     line-height: 1.2;
+  }
+
+  .image {
+    height: 16vh;
+    margin-top: -4em;
   }
 }
